Fix dark mode toggle button and add cursor effect

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Plus+Jakarta+Sans:ital,wght@0,400;0,700;1,400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Inter:wght@400;600&display=swap');
 
 .dark {
   --bg1:#010029;
@@ -126,8 +125,12 @@ i {
   top: 0;
 }
 
+#sidebar p, #sidebar h2 {
+  margin: 0.5rem 0;
+}
+
 #contact {
-  margin: 2rem 0rem 0rem;
+  margin: 1.5rem 0rem 0rem;
 }
 
 #contact a:hover {
@@ -152,6 +155,12 @@ i {
 .main-section {
   margin: 0rem 0rem;
   padding: 0rem 1rem;
+}
+
+#cursor {
+  border-right: 4px solid var(--header);
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
 }
 
 #about {
@@ -350,7 +359,6 @@ i {
   }
 
   #toggle-color-scheme {
-    /* grid-area: pic; */
     margin: 2rem 0 0rem;
     width: 90%;
   }
@@ -381,5 +389,11 @@ i {
 
   #education .summary {
     margin: 0 0 1rem;
+  }
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
   }
 }
